src/objects/peer__Meet_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>peer__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Client_Secret_Id__c</fullName>
        <label>Client Secret Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Redirect_Uri__c</fullName>
        <label>Redirect Uri</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meet Configuration</label>
</CustomObject>